fix display issue with multiple confirmed interviews not showing on same day on user calendar

--- a/public/css/calendar.css
+++ b/public/css/calendar.css
@@ -46,6 +46,10 @@ td {
   gap: 1em;
 }
 
+.timeMid {
+  margin-top: 1vh;
+}
+
 .cal {
   display: flex;
   flex-direction: column;
